Ensure text remains visible during webfont load
ref: https://web.dev/font-display/

--- a/src/views/_typography.scss
+++ b/src/views/_typography.scss
@@ -1,6 +1,7 @@
 // Roboto Cyrillic - Latin
 @font-face {
   font-family: 'Roboto';
+  font-display: swap;
   src: url('/assets/fonts/roboto-v20-cyrillic_latin-regular.eot'); /* IE9 Compat Modes */
   src: url('/assets/fonts/roboto-v20-cyrillic_latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
   url('/assets/fonts/roboto-v20-cyrillic_latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
